package NYT.NElection.NProto;

import "yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqPingFollower
{
    required int32 leader_id = 1;
    required NYT.NProto.TGuid epoch_id = 2;
}

message TRspPingFollower
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqGetStatus
{ }

message TRspGetStatus
{
    required int32 state = 1;
    required int32 vote_id = 2;
    required NYT.NProto.TGuid vote_epoch_id = 3;
    required int64 priority = 4;
    required int32 self_id = 5;
}



////////////////////////////////////////////////////////////////////////////////
